add_executable(doctest_complex doctest_complex.cpp)
add_executable(doctest_rational doctest_rational.cpp)
add_executable(doctest_arrayd doctest_arrayd.cpp)
#add_executable(doctest_matrixvs doctest_matrixvs.cpp)
#add_executable(doctest_matrixds doctest_matrixds.cpp)
#add_executable(doctest_matrixls doctest_matrixls.cpp)
add_executable(doctest_stackl doctest_stackl.cpp)
add_executable(doctest_queuea doctest_queuea.cpp)

target_link_libraries(doctest_complex complex)
target_link_libraries(doctest_rational rational)
target_link_libraries(doctest_arrayd arrayd)
#target_link_libraries(doctest_matrixvs matrixvs)
#target_link_libraries(doctest_matrixds matrixds)
#target_link_libraries(doctest_matrixls matrixls)
target_link_libraries(doctest_stackl stackl)
target_link_libraries(doctest_queuea queuea)